--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
                 forum birol parela maxime infena. Excepteur sint occaecat cupidatat non.
             </p>
         </section>
-        <img src="./image/imagem.png">
+        <img class="apresentacao-imagem" src="./image/imagem.png">
     </main>
     <footer class = "rodape">
         <p>Desenvolvido por Yan Santos Wendt.</p>
