--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     GitHub</a>
             </div>
         </section>
-        <img src="./image/imagem.png" alt="Foto da Joana Santos programando">
+        <img class="apresentacao-imagem" src="./image/imagem.png" alt="Foto da Joana Santos programando">
     </main>
     <footer class = "rodape">
         <p>Desenvolvido por Yan Santos Wendt.</p>
